# SpoolSync-Desktop

./: .gitignore  LICENSE  README.md  TODO.md  package.json  tailwind.config.js  vite.config.ts
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: .gitkeep
src-tauri/src/: bambu_studio.rs  db.rs  filamentcolors.rs  main.rs  mqtt.rs  spoolman.rs
src/lib/components/: Header.svelte  Sidebar.svelte  SyncDialog.svelte
src/lib/stores/: deeplink.ts  filaments.ts  mqtt.ts  settings.ts  spoolman.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/ams/: +page.svelte
src/routes/bambu-studio/: +page.svelte
src/routes/browse/: +page.svelte
src/routes/colors/: +page.svelte
src/routes/custom/: +page.svelte
src/routes/favorites/: +page.svelte
src/routes/settings/: +page.svelte
